# knwoledge-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  REANCHOR.md  docker-compose.yml  pyproject.toml
.claude/: settings.example.json
.claude/commands/: grill-phase.md
.claude/hooks/: rebuild_index.sh  reindex_changed_file.sh
app/backend/: __main__.py  apply_sandbox.py  config.py  db.py  eligibility.py  embeddings.py  graph.py  graph_read.py  keyword_index.py  main.py  manifests.py  models.py  paths.py  policy.py  review_html.py  review_read.py  search.py  taxonomy.py  vector_index.py
app/llm/: __init__.py  adapters.py  cache.py  client.py  prompts.py  schema.py
app/workers/: chunking.py  citations.py  claims.py  concepts.py  contradictions.py  deprecations.py  duplicates.py  enrich.py  enrichment_artifact.py  eval_answers.py  extract.py  human_add.py  intake.py  items.py  labels.py  lint.py  merges.py  promote.py  query.py  reconcile.py  rekeys.py  retention.py  retypes.py  reviews.py  splits.py  synthesis.py  watcher.py  wiki.py  wiki_render.py
db/: metadata.sqlite
docs/: Architecture Overview v0.1.md  Build Specification v0.1.md  Environment Setup v0.1.md  Operations.md  Phase 1 Plan.md  Phase 2 Plan.md  Phase 3 Plan.md  Phase 3.5b Plan.md  Phase 3.5c Plan.md  Phase 4 Plan.md  Phase 4d Plan.md  Phase 4e Plan.md  Phase 5 Plan.md  Phase 6 Plan.md  Phase 7 Plan.md  README.md  UAT Guide.md  Workflow.md
docs/adr/: 0001-use-wsl2-as-runtime.md  0002-raw-sources-are-immutable.md  0003-use-hybrid-search-from-v0-1.md  0004-claude-code-is-development-and-supervised-maintenance.md  (+59 more)
evals/: citation_tests.yaml  golden_answers.example.yaml  golden_questions.yaml  golden_retrieval.yaml  golden_retrieval_relevance.yaml
knowledge-system-scaffold-v0.1/: AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
policies/: citation.yaml  retention.yaml  retrieval.yaml  review.yaml  security.yaml
scripts/: backup.py  check_embedding.py  check_environment.py  detect_contradictions.py  enrich.py  eval_retrieval.py  extract_claims.py  extract_concepts.py  extract_items.py  extract_sources.py  generate_synthesis.py  generate_wiki.py  promote.py  rebuild_index.py  reconcile_reviews.py  reindex_keyword.py  reindex_vector.py  scan_inbox.py  serve.py  validate_all.py  validate_citations.py  validate_frontmatter.py  validate_graph.py  validate_index_consistency.py  validate_link_aliases.py  validate_normalized.py  validate_projection.py  validate_raw_integrity.py  validate_vector_index.py  validate_wiki.py  validate_wikilinks.py
templates/: claim.md  concept.md  entity.md  item.md  query.md  source.md  synthesis.md
tests/: conftest.py  fixtures.py  test_adapters.py  test_api.py  test_apply_dry_run.py  test_backup.py  test_chunking.py  test_citation_anchors.py  test_citations.py  test_claim_visibility.py  test_claim_windows.py  test_claims.py  test_concepts.py  test_contradictions.py  test_db.py  test_dehyphenation.py  test_deprecations.py  test_display_aliases.py  test_duplicates.py  test_embeddings.py  test_enrich.py  test_eval_answers.py  test_eval_retrieval.py  test_extract.py  test_flagembedding_provider.py  test_graph.py  test_graph_read.py  test_hide_content.py  test_hide_semantic_page.py  test_intake.py  test_item_type_faceting.py  test_items.py  test_keyword_index.py  test_lint.py  test_llm.py  test_manifest.py  test_merge.py  test_operational_refs.py  test_paths.py  test_policy.py  (+28 more)
wiki/: index.md
(+54 files in other folders)
