[project]
name = "knowledge-system"
version = "0.1.0"
description = "Local-first agent-maintained LLM Wiki information management system"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "httpx>=0.27.0"]
extraction = ["pypdf>=4.0.0", "python-docx>=1.1.0", "beautifulsoup4>=4.12.0", "pandas>=2.2.0", "openpyxl>=3.1.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# These modules insert the repo root on sys.path before importing app.*,
# so imports intentionally follow that bootstrap.
"app/backend/main.py" = ["E402"]
"scripts/*" = ["E402"]
"tests/*" = ["E402"]
